--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <script src="js/main.js"></script>
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/snap.svg.js"></script>
+    <script src="js/Drag-min.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>theZone</title>
-
+    <style   media="print">
+	  .Noprint{display:none;}
+	</style>
 </head>
 <body>
     <svg id="svg1"></svg>
+    <div id="inp_box" class=".Noprint">
+        <p id="show_title">&nbsp;</p>
+        <table id="inp_tb"></table>
+        
+    </div>
 </body>
 </html>
